<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="125dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editTextTaskDescSub"
        android:layout_marginTop="52dp"
        android:editable="false"
        android:textAlignment="center"
        android:layout_below="@+id/checkedTextViewSub"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="getTaskDesc" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editTextDateSub"
        android:layout_below="@+id/editTextTaskDescSub"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        android:textAlignment="center"
        android:contentDescription="@string/editDateTime"
        android:onClick="getDateDone" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_list"
        android:id="@+id/buttonSubList"
        android:layout_below="@+id/editTextDateSub"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_sub"
        android:id="@+id/buttonDeleteSubTask"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="deleteTask" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_sub"
        android:id="@+id/buttonUpdateSubTask"
        android:layout_alignTop="@+id/buttonDeleteSubTask"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="addTask" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkedTextViewSub"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:checkMark="@color/bright_foreground_inverse_material_dark"
        android:checked="false"
        android:clickable="true"
        android:editable="true"
        android:textSize="24dp"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:onClick="getTaskName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/note_box"
        android:id="@+id/textView2"
        android:layout_below="@+id/checkedTextViewSub"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/editDateTime"
        android:id="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="290dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sub_task_desc"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>