<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#540115"
    android:textColor="#CDC092">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="125dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editTextTaskDesc"
        android:layout_marginTop="52dp"
        android:editable="false"
        android:textAlignment="center"
        android:layout_below="@+id/checkedTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="getTaskDesc"
        android:background="#CDC092"
        android:textColor="#540115"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editTextDate"
        android:layout_below="@+id/editTextTaskDesc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:textAlignment="center"
        android:contentDescription="@string/editDateTime"
        android:onClick="getDateDone"
        android:background="#CDC092"
        android:textColor="#540115"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/del_task"
        android:id="@+id/buttonDeleteTask"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="deleteTask"
        android:background="#CDC092"
        android:textColor="#540115"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:id="@+id/buttonUpdateTask"
        android:layout_alignTop="@+id/buttonDeleteTask"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="addTask"
        android:background="#CDC092"
        android:textColor="#540115"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkedTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:checkMark="@color/bright_foreground_inverse_material_dark"
        android:checked="false"
        android:clickable="true"
        android:editable="true"
        android:textSize="24dp"
        android:textAlignment="center"
        android:layout_marginTop="35dp"
        android:onClick="getTaskName"
        android:background="#CDC092"
        android:textColor="#540115"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/note_box"
        android:id="@+id/textView2"
        android:layout_marginTop="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#CDC092"
        android:textColor="#540115"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/editDateTime"
        android:id="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="290dp"
        android:background="#CDC092"
        android:textColor="#540115"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/task_desc"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#CDC092"
        android:textColor="#540115"/>

</RelativeLayout>